chore: change version

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "jstore-dndkit-sortable-tree",
+  "name": "@revell29/dnd-kit-sortable-tree",
   "version": "0.0.1",
   "license": "MIT",
   "homepage": "https://github.com/shaddix/dnd-kit-sortable-tree#readme",
